# bmad-manager

./: .dockerignore  .gitignore  CLAUDE.md  README.md  SECURITY.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts  wdio.conf.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: E2E_TESTING.md
e2e/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  project-selection.spec.js  session-spawn.spec.js  smoke.spec.js  story-board.spec.js  workflow-artifacts.spec.js
e2e/helpers/: fixtures.js  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bmad_parser/: agents.rs  artifact_browser.rs  artifacts.rs  bug_content.rs  epic_parser.rs  mod.rs  sprint_status.rs  story_content.rs  story_tasks.rs  tasks.rs  types.rs  workflow_state.rs  workflows.rs
src-tauri/src/conflict_detection/: mod.rs
src-tauri/src/file_watcher/: mod.rs
src-tauri/src/initializer/: bmad.rs  git.rs  mod.rs
src-tauri/src/process_manager/: mod.rs  pty.rs  session.rs
src-tauri/src/project/: detection.rs  mod.rs  types.rs
src-tauri/src/session_registry/: db.rs  mod.rs
src-tauri/src/settings/: deps.rs  mod.rs  project_settings.rs  store.rs
src-tauri/src/worktree/: commands.rs  git.rs  merge.rs  mod.rs  types.rs
src/lib/components/: SmokeTest.svelte
src/lib/constants/: workflow.ts
src/lib/services/: artifacts.ts  conflicts.ts  events.test.ts  events.ts  process.ts  (+10 more)
src/routes/: +layout.svelte  +page.svelte
src/tests/: setup.ts
(+147 files in other folders)
