[package]
name = "bmad-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "bmad_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
csv = "1.3"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
notify = "7"
notify-debouncer-mini = "0.5"
tauri-plugin-opener = "2.5.3"

[dev-dependencies]
tempfile = "3"
